<resources>
    <string name="app_name">CodeRepository</string>

    <!--    setupwizard_start -->
    <string name="setupwizard_app_name">开机向导</string>
    <string name="setupwizard_welcome">欢迎使用</string>
    <string name="setupwizard_next">下一步</string>
    <string name="setupwizard_welcome_start">欢迎开始使用手机</string>
    <string name="setupwizard_welcome_use">开始使用</string>
    <string name="setupwizard_not_sim">未检测到SIM卡</string>
    <string name="setupwizard_sim_des_one">插入SIM卡才可设置账户,享受账户带来的同步,</string>
    <string name="setupwizard_sim_des_two">找回手机等功能</string>
    <string name="setupwizard_shutdown">关机</string>
    <string name="setupwizard_go_on">仍然继续</string>
    <string name="setupwizard_check_sim">SIM卡检测</string>
    <!--    setupwizard_end -->


    <!--    gesture_start -->
    <string name="smart_induction">Smart gestures</string>
    <string name="app_is_not_installed">请点击此项选择要启动的应用</string>
    <!-- Sleep gesture start -->
    <string name="smart_awake">Smart awake</string>
    <string name="gesture_sleep">Sleep gesture</string>
    <string name="gesture_select_actions">Select action</string>
    <string name="sleep_open_app">Open APP</string>
    <string name="sleep_unlock_lock_screen">Unlock</string>
    <string name="sleep_awake">Awake</string>
    <string name="sleep_up_gesture">Slide up</string>
    <string name="sleep_down_gesture">Slide down</string>
    <string name="sleep_left_gesture">Slide left</string>
    <string name="sleep_right_gesture">Slide right</string>
    <string name="sleep_dblclick_gesture">Double click</string>
    <string name="sleep_o_gesture">Draw o gestures</string>
    <string name="sleep_e_gesture">Draw e gestures</string>
    <string name="sleep_s_gesture">Draw s gestures</string>
    <string name="sleep_m_gesture">Draw m gestures</string>
    <string name="sleep_w_gesture">Draw w gestures</string>
    <string name="sleep_c_gesture">Draw c gestures</string>
    <string name="sleep_arror_gesture">Draw ^ gestures</string>
    <string name="sleep_d_gesture">Double gestures</string>
    <string name="sleep_v_gesture">Draw v gestures</string>
    <!-- Sleep gesture end -->

    <!-- Quick gesture start -->
    <string name="gestures_quick">Quick gesture</string>
    <string name="three_finger_screenshot">Three finger screenshot</string>
    <string name="three_finger_screenshot_summary">Three finger up and down slide to screenshot</string>
    <string name="two_finger_volume">Two finger adjust volume</string>
    <string name="two_finger_volume_summary">Three finger up and down slide to adjust volume</string>
    <string name="dblclick_sleep">Double click lock</string>
    <string name="dblclick_sleep_summary">Double finger double click to lock the screen</string>
    <!-- Quick gesture end -->

    <!-- Air gesture start -->
    <string name="gestures_air">Air gesture</string>
    <string name="air_switch_fm">FM control</string>
    <string name="air_switch_fm_summary">Slide upon the screen to set the next channel</string>
    <string name="air_switch_photo">Photo control</string>
    <string name="air_switch_photo_summary">Slide upon the screen to see next photo</string>
    <string name="air_switch_music">Music control</string>
    <string name="air_switch_music_summary">Slide upon the screen to switch next music</string>
    <!-- Air gesture end -->

    <!-- Smart call start -->
    <string name="smart_call">Smart call</string>
    <string name="smart_call_content">将设备拿近您的耳朵来呼叫当前通话记录第一个号码或者短信会话界面的联系人,可以接听来电</string>
    <string name="smart_dial">体感拨号</string>
    <string name="smart_answer">体感接听</string>
    <!-- Smart call end -->
    <!-- Smart mute start -->
    <string name="smart_mute">智能静音</string>
    <string name="call_flip_mute">来电静音</string>
    <string name="call_flip_mute_summary">来电翻转手机静音</string>
    <string name="alarm_flip_mute">关闭闹钟</string>
    <string name="alarm_flip_mute_summary">翻转手机关闭闹钟</string>
    <!-- Smart mute end -->

    <!--    gesture_end -->


    <string name="success">success</string>
    <!--autostart-->
    <string name="allow_autostart">个应用允许开机自启动</string>
    <string name="disallow_autostart">个应用禁止开机自启动</string>
    <string name="load_data">数据加载中...</string>
    <string name="allow_background">个应用允许后台运行</string>
    <string name="disallow_background">个应用禁止后台运行</string>

    <!-- warranty-->
    <string name="warranty_regist_success">恭喜您,电子保卡注册成功</string>
    <string name="warranty_regist_info">注册电子保卡将享受一下权益</string>
    <string name="warranty_regist_info_success">尊敬的Homecare用户,您将享受一下权益:</string>
    <string name="warranty_des1">1.电子保卡与纸质保修卡等效,服务时提供首次注册的手机号码、姓名即可;</string>
    <string name="warranty_des2">2.电子保卡可在Homecare全国所有服务网点享受真诚、便捷的专业服务;</string>
    <string name="warranty_des3">3.恢复出出厂设置会将保存在手机的注册记录清除,你需要再次注册电子保卡,但是电子保卡有效时间以首次注册的记录为准,之后发送的注册信息系统不会记录。</string>
    <string name="warranty_des">注册过程可能会由运营商收取基本信息费或流量费</string>
    <string name="warranty_title">电子保卡</string>
    <string name="warranty_regist">注册</string>
    <string name="warranty_cancel">取消</string>
    <string name="warranty_failure">注册电子保卡失败</string>
    <string name="warranty_failure_des1">1.手机未插卡SIM或SIM出现故障</string>
    <string name="warranty_failure_des2">2.手机无网络或网络故障</string>


    <string name="WXAccessibilityService_description">开启此功能,即可使用微信抢红包功能.</string>
    <string name="WXAccessibilityService_label">微信抢红包</string>


</resources>
