<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="120dp"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/warranty_failure"
        android:textColor="#1a1a1a"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="30dp"
        android:singleLine="true"
        android:text="@string/warranty_failure_des1"
        android:textColor="#999999" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="30dp"
        android:singleLine="true"
        android:text="@string/warranty_failure_des2"
        android:textColor="#999999" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:background="#33000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="取消"
            android:textColor="#808080" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#33000000" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="确认"
            android:textColor="#0f8cff" />
    </LinearLayout>

</LinearLayout>